--- a/2017-01-12/CMakeLists.txt
+++ b/2017-01-12/CMakeLists.txt
@@ -12,3 +12,8 @@ add_executable(perf-test-2 perf-test-2/perf-test-2.c)
 project (perf-test-3)
 add_executable(perf-test-3 perf-test-3/perf-test-3.c)
 
+project (perf-test-4)
+add_executable(perf-test-4 perf-test-4/perf-test-4.c)
+
+#project (perf-test-5)
+#add_executable(perf-test-5 perf-test-5/perf-test-5.c)
